--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Dario Di Nucci</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
-        </span>
+            <span class="d-block d-lg-none">Dario Di Nucci</span>
+            <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+            </span>
         </a>
         <span class="d-none d-lg-block">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mx-auto mb-2 w-50" src="img/my_orcid_qrcode.png" alt=""/>
+                <img class="img-fluid img-orcid mx-auto mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
             </a>
         </span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -88,74 +89,89 @@
         <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
                 <h1 class="mb-0">Di Nucci Dario</h1>
-                <p class="mb-5 text-justify small">I obtained my PhD in Management and Information Technology at the University of Salerno, advised by Prof. Andrea De Lucia working on "Methods and Tools for Focusing and Prioritizing the Testing Effort" in 2018.<br/> Currently I am a research fellow in the Software Languages Lab at the Vrije Universiteit Brussel within the "INTelligent Modernisation Assistance for Legacy Software" (INTiMALS) project with Prof. Coen De Roover.<br/> My research interests are within the Software Engineering topic and include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br/> You can find my full Curriculum Vitae <a target="blank" href="Short Resume.pdf">here</a>.</p>
+                <p class="mb-5 text-justify small">I obtained my PhD in Management and Information Technology at the University of Salerno, advised by Prof.
+                    Andrea De Lucia working on "Methods and Tools for Focusing and Prioritizing the Testing Effort" in 2018.
+                    <br/> Currently I am a research fellow in the Software Languages Lab at the Vrije Universiteit Brussel.
+                    <br/> My research interests are within the Software Engineering topic and include software maintenance and
+                    evolution, software testing, search based software engineering, green mining, mining software repositories,
+                    and empirical software engineering.
+                    <br/> You can find my full Curriculum Vitae
+                    <a target="blank" href="Short Resume.pdf">here</a>.</p>
 
                 <p class="mb-5 text-center">
-                    <a href="http://www.vub.ac.be/" target="blank"><img id="vub-logo" src="img/het-vub-logo.png" alt=""/></a><br/> Software Languages Lab<br/> Vrije Universiteit Brussel<br/> Pleinlaan 2<br/> B-1050 Brussels - Belgium<br/> Office 10F725<br/> Telephone +32 02 629 29 65
+                    <a href="http://www.vub.ac.be/" target="blank">
+                        <img id="vub-logo" src="img/het-vub-logo.png" alt="" />
+                    </a>
+                    <br/> Software Languages Lab
+                    <br/> Vrije Universiteit Brussel
+                    <br/> Pleinlaan 2
+                    <br/> B-1050 Brussels - Belgium
+                    <br/> Office 10F725
+                    <br/> Telephone +32 02 629 29 65
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0 text-center">
                     <li class="list-inline-item">
                         <a href="mailto:dario.di.nucci@vub.be">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="skype:dario.dinucci">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-skype fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-skype fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="https://www.researchgate.net/profile/Dario_Di_Nucci">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="ai ai-researchgate fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="ai ai-researchgate fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="ai ai-google-scholar fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="ai ai-google-scholar fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="https://twitter.com/dardin88">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                     <li class="list-inline-item">
                         <a href="https://github.com/dardin88">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </li>
 
                 </ul>
