--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
 
     <title>Dario Di Nucci</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap v5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
                     <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
                 </span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -353,7 +353,7 @@
                                 <span class="badge bg-primary me-2">Android Energy</span>
                                 <span class="badge bg-secondary">MIT License</span>
                             </div>
-                            <p class="card-text">aDoctor is an IntellJ IDEA plugin to detect and refactor five Android-specific code smells that impact the energy consumption of these applications.</p>
+                            <p class="card-text">aDoctor is an IntelliJ IDEA plugin to detect and refactor five Android-specific code smells that impact the energy consumption of these applications.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Android, Energy Efficiency, Code Smells</small>
                             </div>
@@ -457,9 +457,10 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- Core JavaScript -->
     <script src="vendor/jquery/jquery-3.7.0.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
