--- a/services.html
+++ b/services.html
@@ -12,8 +12,8 @@
 
     <title>Dario Di Nucci</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap v5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +41,7 @@
                     <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
                 </span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -74,7 +74,7 @@
 
     <div class="container-fluid p-0">
 
-        <section class="resume-section p-3 p-lg-5 d-flex d-column">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto fade-in-up">
                 <div class="modern-card mb-4">
                     <h3 class="mb-4 gradient-text">Organizing Committee Member of SE Events</h3>
@@ -273,9 +273,10 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- Core JavaScript -->
     <script src="vendor/jquery/jquery-3.7.0.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
